[update] docker name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   bot:
-    container_name: 'Bums (@m3taphor)'
+    container_name: 'Bums - m3taphor'
     build:
       context: .
     stop_signal: SIGINT
