[update] refer bonus, gang, combo

--- a/.env-example
+++ b/.env-example
@@ -3,19 +3,15 @@ API_HASH =
 
 # Support Script Author, Details on Github
 SUPPORT_AUTHOR = True
-# key after 'startapp='
 REF_KEY = 'ref_3CcrQyaN'
 
 # Sleep Script on Night Time
 NIGHT_MODE = False
-# Timezone = UTC, Format = HOURS, [start, end]
 NIGHT_TIME = [0, 7]
-# Seconds of night time check-in
 NIGHT_CHECKING = [3600, 7200]
 
 # Auto Upgrade Tap Cards
 AUTO_UPGRADE_TAP_CARDS = True
-# Max level to set on Upgrade
 JACKPOT_LEVEL = 9
 CRIT_LEVEL = 8
 ENERGY_LEVEL = 12
@@ -24,26 +20,30 @@ ENERGY_REGEN_LEVEL = 10
 
 # Auto Upgrade Mine-Cards
 AUTO_UPGRADE_MINE_CARDS = True
-# Max Purchase of Mine-Cards
 MAX_CARD_PRICE_PURCHASE = 10000
 
 # Auto Tap
 AUTO_TAP = True
-# Per Batch Tap
 TAPS_PER_BATCH = [15, 30]
-# Delay between Batch
 DELAY_BETWEEN_TAPS = [10, 20]
 
 # Auto Task
 AUTO_TASK = True
-# Auto Join Task Channels
 AUTO_JOIN_CHANNELS = True
-# Auto add emoji in last name for Task
 AUTO_NAME_CHANGE = False
+
+# Auto Collect Refer Balance
+COLLECT_REFER_BALANCE = True
+
+# Auto Join Gang
+JOIN_GANG = True
+GANG_USERNAME = mainecode
+
+# Lottery (Combo) Solve
+SOLVE_COMBO = False
 
 # Sleep Script
 SLEEP_TIME = [2700, 4200]
-# Start Delay
 START_DELAY = [5, 100]
 
 IN_USE_SESSIONS_PATH = 'bot/config/used_sessions.txt'
