[update] added box, spins & utube codes
- Added Free Box Opening
- Added Auto Spin
- Added Youtube Codes

--- a/.env-example
+++ b/.env-example
@@ -5,6 +5,14 @@ API_HASH =
 SUPPORT_AUTHOR = True
 REF_KEY = 'ref_3CcrQyaN'
 
+# Auto Game Simple Task
+AUTO_SIGN_IN = True
+AUTO_OPEN_FREE_BOX = True
+
+# Auto Make Spins / Spin Count: 1/2/3/5/10/50
+AUTO_SPINS = True
+SPIN_COUNT = 50
+
 # Sleep Script on Night Time
 NIGHT_MODE = False
 NIGHT_TIME = [0, 7]
