[update] added JS Protection

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,9 @@
 API_ID = 
 API_HASH = 
 
+# Safe Mode
+TRACK_BOT_UPDATES =  True
+
 # Support Script Author, Details on Github
 SUPPORT_AUTHOR = True
 REF_KEY = 'ref_3CcrQyaN'
