[update] (2.1) upgrade fix, added profit upgrade & save req. data
- Fix Mine Cards Upgrade
- Added Profit Card Upgrade
- Added Number Prefix
- Save Request Data
- Improved Error Handline

--- a/.env-example
+++ b/.env-example
@@ -32,6 +32,7 @@ ENERGY_REGEN_LEVEL = 10
 # Auto Upgrade Mine-Cards
 AUTO_UPGRADE_MINE_CARDS = True
 MAX_CARD_PRICE_PURCHASE = 10000
+PROFIT_UPGRADE = True
 
 # Auto Tap
 AUTO_TAP = True
@@ -46,12 +47,15 @@ AUTO_NAME_CHANGE = False
 # Auto Collect Refer Balance
 COLLECT_REFER_BALANCE = True
 
+# Lottery (Combo) Solve
+SOLVE_COMBO = False
+
 # Auto Join Gang
 JOIN_GANG = True
 GANG_USERNAME = mainecode
 
-# Lottery (Combo) Solve
-SOLVE_COMBO = False
+# Request Retry
+MAX_REQUEST_RETRY = 3
 
 # Sleep Script
 SLEEP_TIME = [2700, 4200]
